--- a/CsharpDOJO/CsharpDOJO/MultiThreading.csproj
+++ b/CsharpDOJO/CsharpDOJO/MultiThreading.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CsharpDOJO.MultiThreading.SharedResources</StartupObject>
+    <StartupObject>CsharpDOJO.MultiThreading.ThreadPoolDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,7 @@
     <Compile Include="ContextSwitching.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharedResources.cs" />
+    <Compile Include="ThreadPoolDemo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
